--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,5 @@ contrib/devtools/split-debug.sh
 .vs/DivvyCoin/v15/Browse.VC.opendb
 .vs/slnx.sqlite
 .vs/ProjectSettings.json
+.vs/DivvyCoin/v15/.suo
+.vs/VSWorkspaceState.json
